# PAROT

./: .gitignore  README.md
RT_meshing/: rt_mesher.py
src/Utils/multi_map_server/: CMakeLists.txt  package.xml
src/Utils/odom_visualization/: package.xml
src/Utils/odom_visualization/src/: odom_visualization.cpp
src/Utils/pose_utils/: CMakeLists.txt
src/controller/: CMakeLists.txt  package.xml
src/controller/config/: controller.yaml  iros_run_replay.rviz  viewpoint_visualization.rviz
src/controller/launch/: airsim_with_pos_cmd_bridge.launch  controller.launch  viewpoint_visualization.launch  visualize_iros_run_rviz.launch
src/controller/nodes/: controller_v01.py  keyboard_teleop_pos_cmd.py  pos_cmd_to_local_goal.py  viewpoint_visualization_node.py  visualize_iros_run_rviz.py
src/gaussian_splatting/: CMakeLists.txt  package.xml
src/gaussian_splatting/gs_trainer/: gs_trainer.py
src/gaussian_splatting/launch/: gaussian_splatting.launch
src/gaussian_splatting/nodes/: gaussian_splatting_node.py
src/px4ctrl/: CMakeLists.txt
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/rt_meshing/: CMakeLists.txt  package.xml
src/rt_meshing/launch/: rt_geometry_points.launch  rt_mesh_cvi.launch  rt_mesh_update.launch
src/rt_meshing/nodes/: rt_geometry_points_node.py  rt_mesh_cvi_node.py  rt_mesh_cvi_update_node.py  rt_mesh_update_node.py
