<?xml version="1.0"?>
<package format="2">
  <name>rt_meshing</name>
  <version>0.0.1</version>
  <description>Real-time meshing utilities (mesh CVI updater).</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>
</package>
